--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "dependencies": {
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "^2.0.5",
+    "js-cookie": "^3.0.5",
     "next": "^15.3.5",
     "nodemailer": "^7.0.5",
     "react": "18",
     "react-dom": "18"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "20",
     "@types/react": "18.2.19",
     "@types/react-dom": "18",
